bitfields/tests/compile_error_cases/errors/bitfield_invalid_bitfield_toggle_bit_ops_value.rs
use bitfields::bitfield;

#[bitfield(u32, toggle_bit_ops = 123)]
pub struct Bitfield {
    #[bits(default = 0x12)]
    a: u32,
}

#[bitfield(u32, toggle_bit_ops = invalid)]
pub struct Bitfield2 {
    #[bits(default = 0x12)]
    a: u32,
}

fn main() {}

